wrote packer polr combo latex

--- a/Manuscripts/model-descriptions/copy-and-tweak/citations.bib
+++ b/Manuscripts/model-descriptions/copy-and-tweak/citations.bib
@@ -11,6 +11,17 @@
   publisher={Elsevier}
 }
 
+@article{nosofsky1988exemplar,
+  title={Exemplar-based accounts of relations between classification, recognition, and typicality.},
+  author={Nosofsky, Robert M},
+  journal={Journal of Experimental Psychology: learning, memory, and cognition},
+  volume={14},
+  number={4},
+  pages={700},
+  year={1988},
+  publisher={American Psychological Association}
+}
+
 @article{ward1994structured,
   title={Structured imagination: The role of category structure in exemplar generation},
   author={Ward, Thomas B},
