copytweak back to jk13 spec, added softmax function

--- a/Manuscripts/model-descriptions/copy-and-tweak/citations.bib
+++ b/Manuscripts/model-descriptions/copy-and-tweak/citations.bib
@@ -11,6 +11,17 @@
   publisher={Elsevier}
 }
 
+@article{nosofsky1984choice,
+  title={Choice, similarity, and the context theory of classification.},
+  author={Nosofsky, Robert M},
+  journal={Journal of Experimental Psychology: Learning, memory, and cognition},
+  volume={10},
+  number={1},
+  pages={104},
+  year={1984},
+  publisher={American Psychological Association}
+}
+
 @article{nosofsky1988exemplar,
   title={Exemplar-based accounts of relations between classification, recognition, and typicality.},
   author={Nosofsky, Robert M},
