--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -12,7 +12,7 @@ doi="10.3758/s13423-016-1208-1",
 @article{hidaka2011packing,
   title={Packing: a geometric analysis of feature selection and category formation},
   author={Hidaka, Shohei and Smith, Linda B},
-  journal={Cognitive Systems Research},
+  journal="Cognitive Systems Research",
   volume={12},
   number={1},
   pages={1--18},
@@ -23,7 +23,7 @@ doi="10.3758/s13423-016-1208-1",
 @article{jern2013probabilistic,
   title={A probabilistic account of exemplar and category generation},
   author={Jern, Alan and Kemp, Charles},
-  journal={Cognitive Psychology},
+  journal="Cognitive Psychology",
   volume={66},
   number={1},
   pages={85--125},
@@ -34,7 +34,7 @@ doi="10.3758/s13423-016-1208-1",
 @article{kurtz2015human,
   title={Human category learning: Toward a broader explanatory account},
   author={Kurtz, Kenneth J},
-  journal={Psychology of Learning and Motivation},
+  journal="Psychology of Learning and Motivation",
   volume={63},
   pages={77--114},
   year={2015},
@@ -44,7 +44,7 @@ doi="10.3758/s13423-016-1208-1",
 @article{luce1977choice,
   title={The choice axiom after twenty years},
   author={Luce, R Duncan},
-  journal={Journal of mathematical psychology},
+  journal="Journal of mathematical psychology",
   volume={15},
   number={3},
   pages={215--233},
@@ -55,7 +55,7 @@ doi="10.3758/s13423-016-1208-1",
 @article{marsh1999inadvertent,
   title={The inadvertent use of prior knowledge in a generative cognitive task},
   author={Marsh, Richard L and Ward, Thomas B and Landau, Joshua D},
-  journal={Memory \& Cognition},
+  journal="Memory \& Cognition",
   volume={27},
   number={1},
   pages={94--105},
@@ -63,10 +63,21 @@ doi="10.3758/s13423-016-1208-1",
   publisher={Springer}
 }
 
+@article{medin1978context,
+  title={Context theory of classification learning.},
+  author={Medin, Douglas L and Schaffer, Marguerite M},
+  journal={Psychological Review},
+  volume={85},
+  number={3},
+  pages={207},
+  year={1978},
+  publisher={American Psychological Association}
+}
+
 @article{nosofsky1984choice,
   title={Choice, similarity, and the context theory of classification.},
   author={Nosofsky, Robert M},
-  journal={Journal of Experimental Psychology: Learning, Memory, \& Cognition},
+  journal="Journal of Experimental Psychology: Learning, Memory, \& Cognition",
   volume={10},
   number={1},
   pages={104},
@@ -74,10 +85,43 @@ doi="10.3758/s13423-016-1208-1",
   publisher={American Psychological Association}
 }
 
+@article{nosofsky1986attention,
+  title={Attention, similarity, and the identification--categorization relationship.},
+  author={Nosofsky, Robert M},
+  journal={Journal of Experimental Psychology: General},
+  volume={115},
+  number={1},
+  pages={39},
+  year={1986},
+  publisher={American Psychological Association}
+}
+
+@article{rosch1975cognitive,
+  title={Cognitive representations of semantic categories.},
+  author={Rosch, Eleanor},
+  journal="Journal of Experimental Psychology: General",
+  volume={104},
+  number={3},
+  pages={192},
+  year={1975},
+  publisher={American Psychological Association}
+}
+
+@article{rosch1976basic,
+  title={Basic objects in natural categories},
+  author={Rosch, Eleanor and Mervis, Carolyn B and Gray, Wayne D and Johnson, David M and Boyes-Braem, Penny},
+  journal="Cognitive Psychology",
+  volume={8},
+  number={3},
+  pages={382--439},
+  year={1976},
+  publisher={Elsevier}
+}
+
 @article{smith1993constraining,
   title={Constraining effects of examples in a creative generation task},
   author={Smith, Steven M and Ward, Thomas B and Schumacher, Jay S},
-  journal={Memory \& Cognition},
+  journal="Memory \& Cognition",
   volume={21},
   number={6},
   pages={837--845},
@@ -88,7 +132,7 @@ doi="10.3758/s13423-016-1208-1",
 @article{ward1994structured,
   title={Structured imagination: The role of category structure in exemplar generation},
   author={Ward, Thomas B},
-  journal={Cognitive Psychology},
+  journal="Cognitive Psychology",
   volume={27},
   number={1},
   pages={1--40},
@@ -111,7 +155,7 @@ doi="10.3758/s13423-016-1208-1",
 @article{ward2002role,
   title={The role of graded category structure in imaginative thought},
   author={Ward, Thomas B and Patterson, Merryl J and Sifonis, Cynthia M and Dodds, Rebecca A and Saunders, Katherine N},
-  journal={Memory \& Cognition},
+  journal="Memory \& Cognition",
   volume={30},
   number={2},
   pages={199--216},
