edited PACKER math, added copy-tweak relation section

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -1,12 +1,20 @@
 @Article{conaway2016similar,
-author="Conaway, Nolan and Kurtz, Kenneth J.",
-title="Similar to the category, but not the exemplars: A study of generalization",
-journal="Psychonomic Bulletin {\&} Review",
-year="2016",
-pages="1--12",
-abstract="Reference point approaches have dominated the study of categorization for decades by explaining classification learning in terms of similarity to stored exemplars or averages of exemplars. The most successful reference point models are firmly grounded in the associative learning tradition---treating categorization as a stimulus generalization process based on inverse exponential distance in psychological space augmented by a dimensional selective attention mechanism. We present experiments that pose a significant challenge to popular reference point accounts which explain categorization in terms of stimulus generalization from exemplars, prototypes, or adaptive clusters. DIVA, a similarity-based alternative to the reference point framework, provides a successful account of the human data. These findings suggest that a successful psychology of categorization may need to look beyond stimulus generalization and toward a view of category learning as the induction of a richer model of the data.",
-issn="1531-5320",
-doi="10.3758/s13423-016-1208-1",
+  author="Conaway, Nolan and Kurtz, Kenneth J.",
+  title="Similar to the category, but not the exemplars: A study of generalization",
+  journal="Psychonomic Bulletin {\&} Review",
+  year="2016",
+  pages="1--12",
+  abstract="Reference point approaches have dominated the study of categorization for decades by explaining classification learning in terms of similarity to stored exemplars or averages of exemplars. The most successful reference point models are firmly grounded in the associative learning tradition---treating categorization as a stimulus generalization process based on inverse exponential distance in psychological space augmented by a dimensional selective attention mechanism. We present experiments that pose a significant challenge to popular reference point accounts which explain categorization in terms of stimulus generalization from exemplars, prototypes, or adaptive clusters. DIVA, a similarity-based alternative to the reference point framework, provides a successful account of the human data. These findings suggest that a successful psychology of categorization may need to look beyond stimulus generalization and toward a view of category learning as the induction of a richer model of the data.",
+  issn="1531-5320",
+  doi="10.3758/s13423-016-1208-1",
+}
+
+@book{garner1974processing,
+ author = "Garner, W. R.",
+ title = "The processing of information and structure",
+ publisher = "Erlbaum",
+ address = "Potomac, MD",
+ year = 1974
 }
 
 @article{hidaka2011packing,
@@ -117,6 +125,39 @@ doi="10.3758/s13423-016-1208-1",
   year={1976},
   publisher={Elsevier}
 }
+
+@article{shepard1957stimulus,
+  title={Stimulus and response generalization: A stochastic model relating generalization to distance in psychological space},
+  author={Shepard, Roger N},
+  journal={Psychometrika},
+  volume={22},
+  number={4},
+  pages={325--345},
+  year={1957},
+  publisher={Springer}
+}
+
+@article{shepard1964attention,
+  title={Attention and the metric structure of the stimulus space},
+  author={Shepard, Roger N},
+  journal={Journal of Mathematical Psychology},
+  volume={1},
+  number={1},
+  pages={54--87},
+  year={1964},
+  publisher={Elsevier}
+}
+
+@article{shepard1987toward,
+  title={Toward a universal law of generalization for psychological science},
+  author={Shepard, Roger N},
+  journal={Science},
+  volume={237},
+  number={4820},
+  pages={1317--1323},
+  year={1987}
+}
+
 
 @article{smith1993constraining,
   title={Constraining effects of examples in a creative generation task},
