--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -204,41 +204,53 @@ The procedure was exactly as in Experiment 1: participants first completed a sho
 
 
 
-
+\clearpage
 
 \section{The PACKER Model}
 
-The PACKER model is an extension of the influential Generalized Context Model of category learning \citep[GCM;][]{nosofsky1984choice}. It assumes that each category is encoded by a set of exemplars within a $k$-dimensional psychological space, and that generation is constrained by both similarity to members of the target category (the category in which a stimulus is being generated) as well as similarity to members of other categories. 
+The PACKER model is an extension of the influential Generalized Context Model of category learning \citep[GCM;][]{nosofsky1984choice,nosofsky1986attention}. The GCM simulates categorization under the assumption that learners represent categories as a collection of exemplars, corresponding to the labeled stimuli they have observed. The exemplars are encoded within a $k$-dimensional psychological space, and categorization is based on the amount of similarity between the item to be categorized and the stored exemplars. Similarity between two examples, $s\left(x_i, x_j\right)$, is computed as an inverse exponential function of distance \citep[following][]{shepard1957stimulus,shepard1987toward}:
 
-As in the GCM, the similarity between two examples, $s\left(x_i, x_j\right)$, is an inverse-exponential function of distance:
-% 
 \begin{equation}
-  s\left(x_i,x_j\right) = \exp \left\{ -c \sum_{k}{ \left| x_{ik} - x_{jk} \right|}w_k \right\}
+  s\left(x_i,x_j\right) = \exp \left\{ -c \left[\sum_{k}{ w_k \left| x_{ik} - x_{jk} \right|^r }\right]^{1/r} \right\}
   \label{eq:similarity}
 \end{equation}
 % 
-where $w_k$ is the attention weighting of dimension $k$ ($w_k \geq 0$ and $\sum_k{w_k} = 1$), accounting for the relative importance of each dimension in similarity calculations, and $c$ ($c>0$) is a specificity parameter controlling the spread of exemplar generalization. For simplicity, our simulations will use uniform attention weights, except in our discussion of individual differences.  
+where $w_k$ is the attention weighting of dimension $k$ ($w_k \geq 0$ and $\sum_k{w_k} = 1$), accounting for the relative importance of each dimension in similarity calculations, and $c$ ($c>0$) is a specificity parameter controlling the spread of exemplar generalization. For simplicity, attention will be distributed uniformly in our simulations (unless otherwise noted). The value of $r$ depends on the nature of the experimental conditions being simulated: $r=1$ is appropriate for separable dimensions, whereas $r=2$ is appropriate for integral dimensions \citep[see][]{shepard1964attention,garner1974processing}.
 
-To generate a new example, the model considers both the similarity to examples from contrast categories as well as the similarity to examples (if any exist) in the target category. The aggregated similarity $a$ between generation candidate $y$ and stored exemplars $x$ is given by:
+PACKER's core proposal is that generation is constrained by both similarity to members of the target category (the category in which a stimulus is being generated) as well as similarity to members of other categories: the most desirable generation candidates are similar to members of the target category and not similar to members of contrast categories. This is achieved by aggregating similarity across known exemplars differently according to class membership. The aggregated similarity $a$ between generation candidate $y$ and stored exemplars $x$ is given by:
 % 
 \begin{equation}
     a(y, x) = \sum_j{f(x_j) s(y, x_j)}
 \end{equation}
 % 
-where $f(x_j)$ is a function specifying the extent to the exemplar contributes to generation. PACKER sets $f(x_j)$ depending on exemplar $x_j$'s category membership: $f(x_j) = \phi$ if $x_j$ is a member of a contrast category, and $f(x_j) = \gamma$ if $x_j$ is a member of the target category. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of contrast- and target-category similarity, respectively. Larger absolute values result in greater consideration of those exemplars, with values of 0 eliminating their effect. A negative value for $f(x_j)$ produces a `repelling' effect (exemplars are less likely to be generated nearby $x_j$). Conversely, a positive value for $f(x_j)$ produces an `attracting' effect (exemplars are more likely to be generated nearby $x_j$). 
+where $f(x_j)$ is a function specifying each exemplar's contribution to generation. PACKER sets $f(x_j)$ depending on exemplar $x_j$'s category membership: $f(x_j) = \phi$ if $x_j$ is a member of a contrast category, and $f(x_j) = \gamma$ if $x_j$ is a member of the target category. $\phi$ and $\gamma$ are free parameters ($-\infty \leq \phi, \gamma \leq \infty$) controlling the contribution of contrast- and target-category similarity, respectively. Larger absolute values result in greater consideration of those exemplars, with values of 0 eliminating their effect. A negative value for $f(x_j)$ produces a `repelling' effect (exemplars are less likely to be generated nearby $x_j$). Conversely, a positive value for $f(x_j)$ produces an `attracting' effect (exemplars are more likely to be generated nearby $x_j$). 
 
-PACKER's core proposal is that new categories should be different from existing categories, and same-category exemplars should be similar to one another. This is realized when $\phi \leq 0$, and $\gamma \geq 0$. Negative $\phi$ values encourage $y$ to be distant from the contrast category (as similarity to contrast category exemplars are subtracted during aggregation). Positive $\gamma$ values encourage $y$ to be close to other exemplars of the target category. When $|\phi| = \gamma$, the repulsion effect from contrast categories is equal to the attraction effect to the target category.
+\begin{figure}
+    \begin{center}
+    \inputpgf{figs/}{packer-examples.pgf}
+    \caption{PACKER generation of a category `B' example, following exposure to one member of category `A' and one member of category `B'. Predictions are shown for three different parameterizations: \textit{(a)} Predictions based on contrast similarity only. \textit{(b)} Predictions based on target similarity only.  \textit{(c)} Predictions with both constraints considered.}
+    \label{fig:packer-examples}
+    \end{center}
+\end{figure}
+
+As noted above, PACKER proposes that new categories should be different from existing categories, and same-category exemplars should be similar to one another. This is realized when $\phi \leq 0$, and $\gamma \geq 0$. Negative $\phi$ values encourage $y$ to be distant from contrast categories (as similarity to contrast category exemplars are subtracted during aggregation). Positive $\gamma$ values encourage $y$ to be close to other exemplars of the target category. When $|\phi| = \gamma$, the repulsion effect from contrast categories is equal to the attraction effect to the target category. See Figure \ref{fig:packer-examples} for an illustration of how these parameters are used.
 
 The probability that a given candidate $y$ will be generated is evaluated using an Exponentiated \citet{luce1977choice} choice rule. Candidates with greater values of $a$ are more likely to be generated than candidates with smaller values:
 % 
 \begin{equation}
 p(y) = \dfrac
-    { \exp \{ \theta \cdot a(y, x) \} } 
-    { \sum_i{ \exp \{ \theta \cdot a(y_i, x) \}  } }
+    { \exp  \{ \theta \cdot a \left( y, x \right) \} } 
+    { \sum_i{ \exp  \{ \theta \cdot a \left( y_i, x \right) \}  } }
     \label{eq:packer-choice}
 \end{equation}
 % 
-where $\theta$ ($\theta \geq 0$) controls response determinism. 
+where $\theta$ ($\theta \geq 0$) is a free parameter controlling response determinism. 
+
+\subsection{Relation Between PACKER and Copy-And-Tweak}
+
+The PACKER model is in many senses similar to the copy-and-tweak model reported by \cite{jern2013probabilistic}: both models are exemplar-based, and both models generate new items according to their similarity to known members of the target class. PACKER diverges from from the copy-and-tweak model only in the inclusion of a contrast mechanism, enabling generation according to dissimilarity to members of opposing categories. By consequence, copy-and-tweak can be realized as a parameterization of the PACKER model that is insensitive to category contrast. Specifically, when $\phi = 0$ and $\gamma = 1$ (see Figure \ref{fig:packer-examples}, panel B), PACKER is not influenced by similarity to members of opposite categories, and is mathematically equivalent to a copy-and-tweak approach.
+
+In the sections below, we report simulations using this copy-and-tweak model.  Due to their mathematical equivalence, the comparison between PACKER and copy-and-tweak provides a test of the explanatory value of the contrast mechanism: the account provided by copy-and-tweak will only equal that of PACKER if the contrast mechanism does not offer an advantage.
 
 
 \section{Snippets}
