--- a/Manuscripts/cog-psych/cogpsych.tex
+++ b/Manuscripts/cog-psych/cogpsych.tex
@@ -185,6 +185,17 @@ Following generation, participants completed a generalization phase wherein they
 \section{Experiment 2}
 
 
+\begin{figure}
+    \begin{center}
+    \input{figs/e2-conditions.pgf}
+    \caption{Category types tested in Experiment 2.}
+    \label{fig:e2-conditions}
+    \end{center}
+\end{figure}
+
+We developed two Alpha categories (see Figure \ref{fig:e2-conditions}): the `Bottom' category is a tight cluster in the bottom-center of the space, and the `Middle' category is identical except that it lies in the center of stimulus space. Although this manipulation is minimal (the conditions differ only slightly in the Y-axis position of the experimenter-defined category), the PACKER model predicts strong between-condition differences. According to PACKER, the nature of the space not occupied by the existing categories should determine where members of the Beta category are likely to be generated. Thus, the lower areas of the stimulus space should be less frequently used for generation in the Bottom condition compared to the Middle (as these areas possess greater similarity to the Bottom category). Conversely, the upper areas of the stimulus space should be used for generation more frequently in the Bottom condition compared to Middle.
+
+
 \subsection{Participants \& Materials}
 
 122 participants were recruited from Amazon Mechanical Turk. 61 participants were randomly assigned to the Middle and Bottom conditions each. The stimuli were exactly as in Experiment 1. Again, the assignment of perceptual features (color, size) to axes of the domain space (x, y) was counterbalanced across participants.
@@ -253,7 +264,7 @@ where $\theta$ ($\theta \geq 0$) is a free parameter controlling response determ
 
 The PACKER model is in many senses similar to the copy-and-tweak model reported by \cite{jern2013probabilistic}: both models are exemplar-based, and both models generate new items according to their similarity to known members of the target class. PACKER diverges from from the copy-and-tweak model only in the inclusion of a contrast mechanism, enabling generation according to dissimilarity to members of opposing categories. By consequence, copy-and-tweak can be realized as a parameterization of the PACKER model that is insensitive to category contrast. Specifically, when $\phi = 0$ and $\gamma = 1$ (see Figure \ref{fig:packer-examples}, panel B), PACKER is not influenced by similarity to members of opposite categories, and is mathematically equivalent to a copy-and-tweak approach.
 
-In the sections below, we report simulations using this copy-and-tweak model.  Due to their mathematical equivalence, the comparison between PACKER and copy-and-tweak provides a test of the explanatory value of the contrast mechanism: the account provided by copy-and-tweak will only equal that of PACKER if the contrast mechanism does not offer an advantage.
+In this paper, we report simulations using this copy-and-tweak model. The model we test is identical to PACKER, under the constraints that $\phi = 0$ and $\gamma = 1$, and is a continuous-dimension adaptation of the model tested by \cite{jern2013probabilistic}. Due to their mathematical equivalence, the comparison between PACKER and copy-and-tweak provides a test of the explanatory value of the contrast mechanism: the account provided by copy-and-tweak will only equal that of PACKER if the contrast mechanism does not offer an advantage.
 
 
 \subsection{The Hierarchical Sampling Model}
@@ -270,12 +281,14 @@ To simplify the model predictions, we used {\em maximum a posteriori} (MAP) esti
     \dfrac
     {\kappa n_B}
     {\kappa + n_B}
-    (\bar{x_B}-\mu_B)(\bar{x_B}-\mu_B)^T
+    (\bar{x}_B-\mu_B)(\bar{x}_B-\mu_B)^T
   \right] (\nu + n_B)^{-1}
   \label{eq:Sigma_B}
 \end{equation}
 %
 where $\nu$ ($\nu>k-1$) is an additional free parameter (from the Inverse-Wishart prior on $\Sigma_B$) weighting the importance of $\Sigma_{D}$. When the target category has no members (i.e., $n_B = 0$), items are generated at random.
+
+\nbcnote{should explain Equation \ref{eq:Sigma_B} more fully now that we are not limited for space.}
 
 Generated exemplars are drawn from a multivariate Normal distribution specified by $(\mu_{B}, \Sigma_{B})$. Thus, $p(y)$ is
 \begin{equation}
