expanded/some reformulation of intro and some of background. restructuring

--- a/Manuscripts/cog-psych/citations.bib
+++ b/Manuscripts/cog-psych/citations.bib
@@ -9,6 +9,41 @@
   doi="10.3758/s13423-016-1208-1",
 }
 
+@book{nersessian2008,
+  author = {N. J. Nersessian},
+  title = {Creating Scientific Concepts},
+  publisher = {MIT Press},
+  address = {Cambridge, MA},
+  year = {2008}
+}
+
+@article{mack2013,
+  author = {M. L. Mack and A. R. Preston and B. C. Love},
+  title = {Decoding the brain's algorithm for categorization from its neural implementation},
+  journal = {Current Biology},
+  volume = {23},
+  pages = {2023-2027},
+  year = {2013}
+}
+
+
+
+@book{margolis2015,
+  author = {E. Margolis and S. Laurence},
+  title = {The Conceptual Mind: {N}ew Directions in the Study of Concepts},
+  publisher = {MIT Press},
+  address = {Cambridge, MA},
+  year = {2015}
+}
+
+@book{pothoswills2011,
+  author = {E. M. Pothos and A. J. Wills},
+  title = {Formal Approaches in Categorization},
+  publisher = {Cambridge University Press},
+  address = {Cambridge, UK},
+  year = {2011}
+}
+
 @book{garner1974processing,
  author = "Garner, W. R.",
  title = "The processing of information and structure",
